@@ -13,7 +13,6 @@ or via the user group at http://groups.google.com/group/isgl3d
 
 Priority
 --------
-  - Support for retina display
   - redo vectors/matrices using simple structures for performance (use miniVec, miniMat as principal elements)
 
 Desirable
